# opencode_article

./: .env.example  .gitattributes  .gitignore  Dockerfile.buildozer  README.md  README_APK.md  app_main.py  build_apk.bat  build_apk.sh  buildozer.spec  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml
.opencode/: rules.json
src/: article_generator.py  file_saver.py  image_fetcher.py  news_collector.py  utils.py
tests/: test_article_generator.py  test_file_saver.py  test_utils.py
