[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opencode_article"
version = "1.0.0"
description = "AI 热点新闻文章自动生成器"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "kivy>=2.2.0",
    "plyer>=2.1.0",
]
